# PoseCoach

./: .gitignore  COMPARATIVE_BENCHMARK_GUIDE.md  README.md  aims.md  analyze_per_joint_comparison.py  compare_datasets.py  config.yaml  config_comparative.yaml  pyproject.toml  run_benchmark.py  run_comparative_benchmark.py  run_experiment.py  run_full_benchmark.py  run_full_comparison.py  visualize_comparison.py
configs/: coco_baseline.yaml  gym_exercises.yaml  mpii_baseline.yaml
scripts/: convert_mpii_annotations.py  download_coco.sh  download_mpii.sh
src/pose_bench/: __init__.py  calculate_metrics.py  calculate_per_joint_errors.py  config.py  generate_overlays.py  inference.py  run_benchmark.py  run_single_benchmark.py  visualize_results.py
src/pose_bench.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/pose_bench/common/: __init__.py  coco_schema.py  draw_skeleton.py  error_metrics.py  io.py  metrics.py
src/pose_bench/datasets/: __init__.py  mpii.py
src/pose_bench/models/: __init__.py  base.py  mediapipe_blazepose.py  mm_pose_placeholder.py  movenet.py  openpose_placeholder.py  yolov8_pose.py
